# first-django-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: flake8.yml  linting.yml
basic_django/basic_django/: settings.py
environment/: dev.env  prod.env
first_django_app/: asgi.py  celery.py  consumers.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  WebSocketContext.jsx  index.css
my_project/: pyvenv.cfg
my_site/: db.sqlite3
my_site/my_site/: settings.py  urls.py
my_site/users/: models.py  views.py
my_site/users/migrations/: 0001_initial.py
users/: admin.py  consumers.py  middleware.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_city_remove_user_house_number_and_more.py  0003_alter_user_options.py  0004_user_role.py  0005_notification.py
users/tests/: test_notification.py  tests.py
