[tool.poetry]
name = "first-django-app"
version = "0.1.0"
description = ""
authors = ["Sn1kls <macks.chigrin@gmail.com>"]
license = "MIT"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
