[tool.poetry]
name = "first-django-app"
version = "0.1.0"
description = ""
authors = ["Sn1kls <macks.chigrin@gmail.com>"]
license = "MIT"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
django-extensions = "^3.2.3"
django = "^5.1.2"
pygraphviz = "^1.14"
pydotplus = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
